[package]
name = "orc"
version = "0.0.1"
authors = ["madmalik <matthias.tellen@gmail.com>"]
description = "Don't use this yet!"
repository = "https://github.com/madmalik/orc.rs"
readme = "README.md"
keywords = ["gc", "rc", "reference", "counting", "garbage"]
license = "MIT"

[lib]
name = "orc"
path = "src/lib.rs"

[dependencies]
crossbeam = "0.2.5"
clippy = "*"